gobmkida/c3/gtp_owl_connection_defends
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gtp_owl_connection_defends/src/interface/play_gtp.c:2011:34: error: use of undeclared identifier 'gtp_print_code_conversion'
gtp_printf( "%d", ( unsigned int)gtp_print_code_conversion[v7]); 
                                 ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gtp_owl_connection_defends/src/obj/2/play_gtp.o] Error 1
